[package]
name = "scdecrypt-gui"
version = "1.0.0"
description = "Syncthing Decrypt GUI"
authors = ["ruichuang"]
edition = "2021"

[lib]
name = "scdecrypt_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
zip = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
